# herds

./: .gitignore  DESIGN.md  README.md  ROADMAP.md  pyproject.toml
examples/: claude_agent.py  quickstart.py  remote_function.py
scripts/: build_release.sh  deploy-relay.sh  smoke.py
src/darwin/: __init__.py  config.py  host.py  protocol.py
src/darwin/cli/: __init__.py
src/darwin/control/: __init__.py  store.py
src/darwin/daemon/: __init__.py  __main__.py  executor.py  files.py  images.py  machine.py  metrics.py
src/darwin/sdk/: __init__.py  app.py  client.py  image.py  mac.py  sandbox.py  secret.py
src/herds/: __init__.py  config.py  host.py  protocol.py  relay.py  skill.py
src/herds/cli/: __init__.py
src/herds/control/: __init__.py  store.py
src/herds/daemon/: __init__.py  __main__.py  executor.py  files.py  images.py
src/herds/sdk/: __init__.py  app.py  client.py  mac.py  sandbox.py  secret.py  volume.py
tests/: test_executor.py  test_protocol.py  test_store_and_images.py
web/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx  template.tsx
web/app/activate/: page.tsx
web/app/dashboard/: page.tsx
web/app/docs/: page.tsx
web/app/login/: page.tsx
web/app/machine/: page.tsx
web/app/machines/: page.tsx
web/app/runs/: page.tsx
web/app/sandbox/: page.tsx
web/app/sandboxes/: page.tsx
web/app/secrets/: page.tsx
web/app/settings/: page.tsx
web/app/setup/: page.tsx
web/app/signup/: page.tsx
web/app/skill/: page.tsx
web/app/volume/: page.tsx
web/app/volumes/: page.tsx
web/app/welcome/: page.tsx
web/components/: AppChrome.tsx  Auth.tsx  CommandPalette.tsx  FileBrowser.tsx  JobsTable.tsx  LiveTail.tsx  LogDrawer.tsx  Logo.tsx  NavProgress.tsx  NewSandboxModal.tsx  OfflineBanner.tsx  Onboarding.tsx  Skeleton.tsx  Toast.tsx  TokenGate.tsx  TopNav.tsx  charts.tsx  ui.tsx  widgets.tsx
web/components/docs/: Docs.tsx  content.tsx  ui.tsx
web/components/platform/: Landing.tsx  WorldMap.tsx  worldmap.ts
web/lib/: api.ts  format.ts  highlight.ts  platform.ts
web/public/: install  skill.md
web/scripts/: gen_map.mjs
