[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herds"
version = "0.1.9"
description = "Connect your Mac to the internet and turn it into a programmable runtime. Modal, for Macs."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Spawn Labs", email = "teddy@spawnlabs.ai" }]
keywords = ["mac", "macos", "runtime", "sandbox", "modal", "ci", "xcode", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "anyio>=4.0"]
# Postgres-backed relay account store (our cloud relay only; set HERDS_DATABASE_URL).
relay = ["psycopg[binary]>=3.1", "psycopg-pool>=3.2"]

[project.scripts]
herds = "herds.cli:app"
herdsd = "herds.daemon:main"

[project.urls]
Homepage = "https://herds.run"
Repository = "https://github.com/teddyoweh/herds"
Issues = "https://github.com/teddyoweh/herds/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/herds"]
# Bundle the pre-built static dashboard so `pip install` ships the full UI.
artifacts = ["src/herds/web_dist/**/*"]

[tool.hatch.build.targets.sdist]
# Keep the bundled dashboard in the sdist too, so a wheel built from it isn't UI-less.
artifacts = ["src/herds/web_dist/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
